test/files/neg/macro-keyword.check
Macros_Bind_12.scala:2: error: illegal start of simple pattern
  val Some(macro) = Some(42)
           ^
Macros_Bind_12.scala:6: error: ')' expected but '}' found.
}
^
Macros_Class_4.scala:3: error: identifier expected but 'macro' found.
class macro
      ^
Macros_Class_5.scala:2: error: identifier expected but 'macro' found.
  class macro
        ^
Macros_Def_13.scala:2: error: identifier expected but 'macro' found.
  def macro = 2
      ^
Macros_Object_6.scala:3: error: identifier expected but 'macro' found.
object macro
       ^
Macros_Object_7.scala:2: error: identifier expected but 'macro' found.
  object macro
         ^
Macros_Package_10.scala:1: error: identifier expected but 'macro' found.
package macro
        ^
Macros_Package_11.scala:3: error: identifier expected but 'macro' found.
package macro.foo
        ^
Macros_Trait_8.scala:3: error: identifier expected but 'macro' found.
trait macro
      ^
Macros_Trait_9.scala:2: error: identifier expected but 'macro' found.
  trait macro
        ^
Macros_Type_3.scala:2: error: identifier expected but 'macro' found.
  type macro = Int
       ^
Macros_Val_1.scala:2: error: illegal start of simple pattern
  val macro = ???
      ^
Macros_Val_1.scala:3: error: '=' expected but '}' found.
}
^
Macros_Var_2.scala:2: error: illegal start of simple pattern
  var macro = ???
      ^
Macros_Var_2.scala:3: error: '=' expected but '}' found.
}
^
16 errors found
